--- a/templates/vm.html
+++ b/templates/vm.html
@@ -9,33 +9,55 @@
           <p><label>VM登陆密码【12位/大小写+数字】 <input type="text" name="vmpasswd" value="Thisisyour.password1" autocomplete="off" required></label></p>
           <p><label>root密码 <input type="text" name="rootpwd" value="rootpassword1" autocomplete="off" required></label></p>
         <p><label>区域 <select name="location" required>
-            <option value="eastasia">香港</option>
             <option value="westus2">美国西2</option>
             <option value="westus3">美国西3</option>
             <option value="centralus">美国中</option>
-            <option value="eastus">美西东</option>
+            <option value="eastus">美国东</option>
             <option value="southeastasia">新加坡</option>
+            <option value="eastasia">香港</option>
             <option value="japanwest">日本西</option>
             <option value="japaneast">日本东</option>
             <option value="koreacentral">韩国中</option>
             <option value="koreasouth">韩国南</option>
+            <option value="australiaeast">澳洲南</option>
+            <option value="northeurope">欧洲北</option>
+            <option value="uksouth">英国南</option>
+            <option value="southafricanorth">南非北</option>
+            <option value="canadacentral">加拿大中</option>
+            <option value="francecentral">法国中</option>
+            <option value="germanywestcentral">德国中西</option>
+            <option value="norwayeast">挪威东</option>
+            <option value="switzerlandnorth">瑞典北</option>
+            <option value="uaenorth">阿联酋北</option>
+            <option value="australiacentral">澳洲中</option>
+            <option value="australiasoutheast">澳洲东南</option>
+            <option value="southindia">印度南</option>
+            <option value="westindia">印度西</option>
+            <option value="ukwest">英国西</option>
+            <option value="canadaeast">加拿大东</option>
+            <option value="brazilsouth">巴西南</option>
         </select></label></p>
         <p><label>型号 <select name="size" required>
-            <option value="Standard_B1s">B1s</option>
+            <option value="Standard_B1s">B1s - 1C1G</option>
             <option value="Standard_B1ls">B1ls</option>
-            <option value="Standard_B2s">B2s</option>
-            <option value="Standard_D2s_v3">D2s</option>
-            <option value="Standard_D4s_v3">D4s</option>
-            <option value="Standard_F2s">F2s</option>
-            <option value="Standard_F4s">F4s</option>
+            <option value="Standard_B1ms">B1ms - 1C2G</option>
+            <option value="Standard_B2s">B2s - 2C4G</option>
+            <option value="Standard_B2ms">B2ms - 2C8G</option>
+            <option value="Standard_D2s_v3">D2s - 2C8G</option>
+            <option value="Standard_D4s_v3">D4s - 4C16G</option>
+            <option value="Standard_F2s">F2s - 2C4G - 更好的性能</option>
+            <option value="Standard_F4s">F4s - 4G8G - 更好的性能</option>
         </select></label></p>
         <p><label>硬盘大小 <select name="storgesize" required>
-            <option value=64>64</option>
-            <option value=128>128</option>
-            <option value=256>256</option>
-            <option value=512>512</option>
-            <option value=1024>1024</option>
-            <option value=30>30</option>
+	        <option value="30">30</option>
+            <option value="32">32 GB</option>
+            <option value="64">64 GB</option>
+            <option value="64">100 GB</option>
+	        <option value="128">128 GB</option>
+            <option value="256">256 GB</option>
+            <option value="256">300 GB</option>
+            <option value="512">512 GB</option>
+            <option value="1024">1 TB</option>
         </select></label></p>
         <p><label>数量 <select name="set" required>
             <option value="1">创建1台</option>
